# extreme_ttt

./: .clang-format  .gitignore  Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  Move.cpp  Move.h  README.md  Rendering.h  diff.patch  pch.h  settings.ini  settings.ini.sample
.github/workflows/: cmake-multi-platform.yml
players/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.h  MinMaxPlayer.cpp  MinMaxPlayer.h  Player.h  PlayerInterface.h  RandomPlayer.h
src/: AppConfig.h  Board.cpp  Board.h  Game.cpp  Game.h  Main.cpp  Rendering.h  pch.h
src/players/: AIPlayer.cpp  AIPlayer.h  HumanPlayer.h  Player.h  RandomPlayer.h
tests/: test.cpp
